# Slopify

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  docs.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  slopify_e2e.mjs  slopify_runtime_v2.mjs  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/desktop/: electron-builder.yml  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  store.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/core/: db.ts  native.ts  repository.ts  sync-client.ts
apps/desktop/src/main/: db.ts  ipc.ts  main.ts  repository.ts  schema.ts  sync-client.ts
apps/desktop/src/preload/: index.cts  index.mts  index.ts
apps/sync-server/: Dockerfile  package.json  tsconfig.tsbuildinfo
apps/sync-server/src/: db.ts  index.ts  repository.test.ts  repository.ts
docs/: architecture.md  deployment-guide.md  digitalocean-operator-guide.md  docsv2.md  end-user-install.md  github-integration-hooks.md  overview.md  user-guide.md
docs/superpowers/plans/: 2026-04-04-electron-to-tauri-migration.md
docs/superpowers/specs/: 2026-04-04-electron-to-tauri-migration-design.md
e2e/: global.d.ts  runtime.spec.ts  tsconfig.json  ui.spec.ts
e2e/fixtures/: electron.ts
e2e/helpers/: api-actions.ts  client.ts  ui-actions.ts
(+6 files in other folders)
